--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "cw20-base"
-version.workspace = true
-authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
+name = "cw20-mintable"
+version =  "0.1.0"
+authors = ["Plastic Digits <plasticdigits@users.noreply.github.com>"]
 edition = "2021"
-description = "Basic implementation of a CosmWasm-20 compliant token"
-license = "Apache-2.0"
-repository = "https://github.com/CosmWasm/cw-plus"
-homepage = "https://cosmwasm.com"
-documentation = "https://docs.cosmwasm.com"
+description = "Mintable fork of CW-20 base"
+license = "GPL-3.0"
+repository = "https://github.com/plasticdigits/cw20-mintable"
+homepage = "https://ceramicliberty.com"
+documentation = "https://ceramicliberty.com"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -17,16 +17,16 @@ crate-type = ["cdylib", "rlib"]
 library = []
 
 [dependencies]
-cosmwasm-schema = { workspace = true }
-cw2 = { workspace = true }
-cw20 = { workspace = true }
-cw-storage-plus = { workspace = true }
-cosmwasm-std = { workspace = true }
-schemars = { workspace = true }
-semver = { workspace = true }
-serde = { workspace = true }
-thiserror = { workspace = true }
+cosmwasm-schema = "2.0.2"
+cw2 = "2.0.0"
+cw20 = "2.0.0-rc.0"
+cw-storage-plus = "2.0.0"
+cosmwasm-std = "2.0.2"
+schemars = "0.8.15"
+semver = "1"
+serde = { version = "1.0.188", default-features = false, features = ["derive"] }
+thiserror = "1.0.4"
 
 [dev-dependencies]
-cw-multi-test = { workspace = true }
-cw-utils = { workspace = true }
+cw-multi-test = "2.0.0"
+cw-utils = "2.0.0"
