Fix instructions for building the contract. Update dependencies to allow rust-optimizer 0.16.1 to run without edition 2024

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ schemars = "0.8.15"
 semver = "1"
 serde = { version = "1.0.188", default-features = false, features = ["derive"] }
 thiserror = "1.0.4"
+base64ct = "=1.7.3"
 
 [dev-dependencies]
 cw-multi-test = "1.2.0"
